SFDCProject/src/objects/Async_Process_Queue__c.object
<CustomObject>
    <description>Asynchronous Process Requests queue</description>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rec_ID__c</fullName>
        <description>ID of the record for which Asynchronous request needs to be processed</description>
        <label>Rec ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_End_Time__c</fullName>
        <description>End Date/Time for Asynchronous request processing.</description>
        <label>Request End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Start_Time__c</fullName>
        <description>Start Date/Time for Asynchronous request processing.</description>
        <label>Request Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>Asynchronous Request Status</description>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Request Name</description>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>LoadRelatedRecords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpdateLastClick</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Details__c</fullName>
        <label>Response Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Async Process Queue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Async Process Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Process Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>